# Algorithms-and-Data-Structure-in-C

./: CMakeLists.txt  README.md
challanges-c/1_challange1_C/: desafio1.c
challanges-c/2_challange5_C/: lab-hierarquia.c  teste-11.txt  teste-5.txt
challanges-c/2_challange6_C/: global.c  global.h  register-challange.c
challanges_C/: challange4_C.rar
challanges_C/challange2_C/: des02.c  desafio02.c
challanges_C/challange3_C/: desafio3.c
lista-1-c-condicionais/: exe01.c
lista-2-c-lacos/: exe02.c
lista-3-c-vetores-e-matrizes/: exe03.c  global.c  global.h
lista-4-c-strings/: exe04.c  global.c  global.h
lista-5-c-funcoes/: global.c  global.h
lista-6-c-search/: exe06.c  global.c  global.h
lista-7-c-ponteiros/: CMakeLists.txt  exe07.c  global.c  global.h
lista-8-c-recursividade/: exe08.c  global.c  global.h
lista-9-c-files/: exe09.c  global.c  global.h
lista-extra-1-c/: IFBA_algoritmos.c
lista-extra-2-c/: Guaranara_algoritmos.c
lista-extra-3-c/: CMakeLists.txt  teste.c
lista_1_C_condicionais/: exe01.c
lista_2_C_lacos/: exe02.c
lista_3_C_vetores_e_matrizes/: exe03.c  global.c  global.h
lista_4_C_strings/: exe04.c  global.c  global.h
lista_5_C_funcoes/: constantes.c  exe05.c  global.c  global.h
lista_6_C_search/: exe06.c  global.c  global.h
lista_7_C_files/: exe07.c  global.c  global.h
lista_7_C_ponteiros/: exe07.c  global.c  global.h
lista_8_C_recursividade/: exe08.c  global.c  global.h
lista_9_C_files/: exe02.txt  exe09.c  global.c  global.h
lista_extra_1_C/: IFBA_algoritmos.c
lista_extra_2_C/: Guaranara_algoritmos.c
(+101 files in other folders)
